# Vehicle-Insurance

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  setup.py
notebook/: mongoDB_demo.ipynb
src/configuration/: aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/pipline/: training_pipeline.py
static/css/: style.css
