[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [
    { name = "Jyotiprakash Lenka", email = "jyotiprakash4357@gmail.com" },
]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
