[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [
    { name = "Jyotiprakash Lenka", email = "jyotiprakash4357@gmail.com" },
]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }


[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_unused_ignores = false
warn_return_any = false
strict_optional = false
follow_imports = "silent"

[tool.flake8]
max-line-length = 120
ignore = [
    "E203", # whitespace before ':'
    "W503", # line break before binary operator
    "F401", # imported but unused
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
]
